--- a/lambda/get_device_reading/package.json
+++ b/lambda/get_device_reading/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "aws-sdk": "2.631.0",
     "jest": "25.4.0"
   },
   "dependencies": {
-    "aws-xray-sdk-core": "1.1.2"
+    "aws-sdk": "2.631.0"
   },
   "scripts": {
     "test": "jest"
