reading lambda.  Fixes #2

--- a/lambda/get_device_reading/package.json
+++ b/lambda/get_device_reading/package.json
@@ -9,6 +9,7 @@
     "aws-sdk": "2.631.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "mkdir -p ./dist && cp package.json dist/ && cp index.js dist/ && cp s3Service.js dist"
   }
 }
